# PhysicsLib

./: CMakeLists.txt  PhysicsLib.build.cs  README.md  build.command  build.sh
include/: CMakeLists.txt
include/PhysicsLib/: Force.h  FreeFall.h  PhysicsLib.h  Vector.h  Velocity.h
libs/: CMakeLists.txt
src/: CMakeLists.txt
src/Private/: CMakeLists.txt  FreeFall.cpp  PhysicsLib.cpp  Vector.cpp  Velocity.cpp
src/Public/: CMakeLists.txt
tests/: CMakeLists.txt  Fixture.h  Tests.cpp
